--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "nodemon ./index.js",
     "css": "postcss public/css/tailwind.css -o public/css/app.css --watch",
     "js": "webpack --watch",
+    "build": "webpack",
     "dev": "concurrently \"npm run css\" \"npm run js\"",
     "db:importar": "node ./seed/seeder.js -i",
     "db:eliminar": "node ./seed/seeder.js -e"
